[package]
name = "rust-time-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
mold = "0.0.1"
job_scheduler = "*"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.11.0", features = ["full"] }
dotenv = "0.15.0"

[[bin]]
name = "rust-time-schedular"
path = "src/main.rs"
